@@ -1,0 +1,5 @@
+std = "lua51"
+global = false
+ignore = {"611"}
+max_line_length = 512
+unused_args = false
