@@ -174,6 +174,8 @@ GW_CHANGELOGS = "- Fix lua error in BGs for level 60 chars\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "\n\n1.6.8\n\n" .. GW_CHANGELOGS
 
 --VERSION 1.6.9
+GW_CHANGELOGS = "- Settings: Checkboxes now also toggle if click on the text\n" .. GW_CHANGELOGS
+GW_CHANGELOGS = "- If minimap is on top now all icons on the minimap are accessable\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "- Added 'Total DPS' into the Damage stats tooltip\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "- Fix short freeze when open bag or bank\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "- Added option the set the Stancebar to the left or right of the Actionbar\n" .. GW_CHANGELOGS
