@@ -1,0 +1,1 @@
+manual-changelog: CHANGELOG.txt
